# mike

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CHANGES.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  codecov.yml  requirments.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
mike/: __main__.py  app_version.py  arguments.py  commands.py  driver.py  git_utils.py  jsonpath.py  mkdocs.py  mkdocs_plugin.py  mkdocs_utils.py  server.py  versions.py
mike/templates/: redirect.html
mike/themes/material/js/: version-select.js
mkultra/: app_version.py  commands.py  driver.py  git_utils.py  mkdocs.py  versions.py
mkultra/templates/: index.html
multi_mkdocs/: gh_deploy.py  git_utils.py  version.py
test/: __init__.py
test/data/: template.html
test/data/basic_theme/: mkdocs.yml
test/data/mkdocs_plugin/: mkdocs.yml
test/data/no_directory_urls/: mkdocs.yml
test/data/no_theme/: mkdocs.yml
test/data/remote/: mkdocs.yml
test/data/site_dir/: mkdocs.yml
test/data/theme_object/: mkdocs.yml
test/integration/: __init__.py  test_alias.py  test_command_line.py  test_delete.py  test_deploy.py  test_help.py  test_install_extras.py  test_intall_extras.py  test_list.py  test_props.py  test_rename.py  test_retitle.py  test_serve.py  test_set_default.py
test/unit/: mock_server.py  test_arguments.py  test_commands.py  test_driver.py  test_git_utils.py  test_jsonpath.py  test_mkdocs.py  test_mkdocs_plugin.py  test_mkdocs_utils.py  test_server.py  test_versions.py
theme-resources/mkdocs/css/: version-select.css
(+5 files in other folders)
